# FastAPI-project

./: DEBUG_TELEGRAM.md  README.md  TELEGRAM_SETUP.md  dev_studio.db  pyproject.toml  requirements.txt  run.py
app/: config.py  database.py  main.py  models.py  schemas.py  telegram.py
app/api/: contacts.py  dependencies.py  health.py  projects.py  telegram_test.py
